# USBCore

./: .gitmodules  LICENSE
Arty/: system.xdc  ulpi_pmod.xdc
BlockDesign/MicroblazeSystem/: MicroblazeSystem.bd
Constraints/Arty/: system.xdc  ulpi_pmod.xdc
Core/: core_pkg.vhdl  ulpi_port.vhdl  usb_packet.vhdl  usb_state.vhdl  usb_std_request.vhdl  usb_tlp.vhdl  usb_xfer.vhdl
Debug/: debug.xdc  usbcore_debug.v
Documentation/: Doxyfile
Examples/ArtyDebug/: arty_debug.sv  arty_debug_vio.xcix  debug.xdc  jtag_axi.xcix
Examples/EP1_Loopback/: EP1_Loopback.xise  ep1_loopback.vhdl
Examples/SPI_Flasher/: SPI_Flasher.xise  spi_flasher.vhdl
Extra/: blk_ep_in_ctl.vhdl  blk_ep_out_ctl.vhdl  extra_pkg.vhdl  sync_fifo.vhdl  usb_flasher.vhdl
Include/: usb_core.sv
MicroblazeSystem/: MicroblazeSystem.bd  MicroblazeSystem.bxml
SIM/: ulpi_ctl_tb.v  ulpi_phy_bfm.v
Scripts/: hw_axi_kick_ulpi.tcl  run_elf.tcl  sdk_create_bsp.tcl
Software/: arty_debug.hdf
Software/SPI_Flasher/: CMakeLists.txt  main.c  spi_flasher.c  spi_flasher.h
Software/microblaze-controller/: CMakeLists.txt  console.c  console.h  link.ld  main.c
Test/: usb_flasher_tb.vhdl
UCF/: numato_saturn6_dbg.ucf  numato_saturn6_flash.ucf  numato_saturn6_main.ucf  numato_saturn6_ulpi.ucf  numato_saturn6_usb3300.ucf
ULPI/: ulpi_axis.sv  ulpi_controller.sv  ulpi_ctl.v  ulpi_io_xilinx.sv  ulpi_io_xilinx.v
USB/: usb_state_controller.sv  usb_state_ctl.v  usb_tlp.v  usb_trn.sv  usb_xfer.v
Vivado/: USBCore.xpr
Xilinx_IP/blk_in_fifo/: blk_in_fifo.xco  blk_in_fifo.xise
(+44 files in other folders)
