SET(MICROBLAZE_BSP_ROOT ${CMAKE_SOURCE_DIR}/../arty_debug_bsp/CPU)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../microblaze-cmake/cmake)
SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../microblaze-cmake/cmake/gcc_microblaze.cmake)

PROJECT(microblaze-controller)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(MicroblazeBSP REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${MicroblazeBSP_INCLUDE_DIR}
)

SET(PROJECT_SOURCES
    main.c
    console.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf ${MicroblazeBSP_LIBRARIES})
MICROBLAZE_SET_LINKER_SCRIPT(${CMAKE_PROJECT_NAME}.elf ${CMAKE_CURRENT_SOURCE_DIR}/link.ld)
MICROBLAZE_ADD_BIN(${CMAKE_PROJECT_NAME}.elf)
MICROBLAZE_PRINT_SIZE(${CMAKE_PROJECT_NAME}.elf)
